bk_ida/gccida/g0/force_not_mem
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/force_not_mem/src/explow.c:1238:23: error: use of undeclared identifier 'machine_mode'
temp = gen_reg_rtx( ( machine_mode)*( ( unsigned __int8 *)x + 2)); 
                      ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/force_not_mem/src/obj/explow.o] Error 1
